Revert "Revert "fix : aligned badges on the icons.""

--- a/Badges/badges.css
+++ b/Badges/badges.css
@@ -34,10 +34,10 @@
   padding: 2px 7px;
   border-radius: 50%;
   background-color: var(--primary-color);
-  color: white;
+  color: var(--text-color);
   position: relative;
-  bottom: 2.5rem;
-  right: 1.5rem;
+  bottom: 2.2rem;
+  right: 1.6rem;
 }
 
 .cart-img {
@@ -49,10 +49,10 @@
   padding: 3px 7px;
   border-radius: 50%;
   background-color: var(--primary-color);
-  color: white;
+  color: var(--text-color);
   position: relative;
-  bottom: 2rem;
-  right: 0.2rem;
+  bottom: 1.3rem;
+  right: 0.5rem;
 }
 
 .badge-over-text {
@@ -61,8 +61,8 @@
 
 .badge {
   position: relative;
-  bottom: 1.4rem;
-  right: 0.3rem;
+  bottom: 1rem;
+  right: 0.5rem;
   background-color: var(--primary-color);
   color: var(--text-color);
   padding: 3px 9px;
@@ -74,15 +74,14 @@
 }
 
 .large-badge {
-  padding: 0.3rem 0.8rem;
+  padding: 0.1rem 0.5rem;
   font-size: 1.5rem;
   border-radius: 50%;
-  bottom: 1.8rem;
 }
 
 .badge-btn {
   background-color: var(--secondary-color);
-  color: white;
+  color: var(--text-color);
   padding: 0.7rem 1rem;
   border: none;
   border-radius: 4px;
@@ -90,7 +89,7 @@
 }
 
 .badge-on-btn {
-  bottom: 2rem;
-  right: 0.7rem;
+  bottom: 1.6rem;
+  right: 0.9rem;
   background-color: var(--primary-color);
 }
